mmc: Add mcom03-sdhci driver
This is initial version of driver for MCom-03 SDMMC controller.
Setting tap delays is not supported yet.

Issue: #MCOM03SW-205
Change-Id: Ie05634a7d1c40274b28b13898670e205d2ea7ebf

--- a/board/elvees/Kconfig
+++ b/board/elvees/Kconfig
@@ -10,6 +10,7 @@ choice
 config TARGET_HAPS
 	bool "HAPS"
 	select DM_ETH
+	select DM_MMC
 	help
 	  Support for the following boards:
 	    HAPS prototype for MCom-03
