mcom03: dts: Decribe SDMMC
Only SDMMC0 is available on HAPS.
High Speed mode doesn't work on HAPS since tap delay buffers
are not implemented.

Issue: #MCOM03SW-205
Change-Id: I5f1007b92e4c9abdddb998b620da1465839008d5

--- a/arch/arm/dts/mcom03-haps-full.dts
+++ b/arch/arm/dts/mcom03-haps-full.dts
@@ -101,3 +101,13 @@
 &wdt0 {
 	clocks = <&common_clk>;
 };
+
+&sdhci0 {
+	/* SDHCI0 is connected to eMMC on HAPS */
+	clocks = <&common_clk>, <&common_clk>;
+	bus-width = <8>;
+	no-1-8-v;
+	non-removable;
+	status = "okay";
+	elvees,broken-hs;
+};
