mcom03haps_defconfig: Enable mcom03-sdhci
Issue: #MCOM03SW-205
Change-Id: Ia636e150933789ed35c94ec9852e0a28c91d7128

--- a/configs/mcom03haps_defconfig
+++ b/configs/mcom03haps_defconfig
@@ -9,11 +9,15 @@ CONFIG_TPL_SYS_MALLOC_F_LEN=0x400
 # CONFIG_DISPLAY_CPUINFO is not set
 CONFIG_HUSH_PARSER=y
 CONFIG_CMD_MEMINFO=y
+CONFIG_CMD_MMC=y
 CONFIG_CMD_DHCP=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_CACHE=y
 CONFIG_DEFAULT_DEVICE_TREE="mcom03-haps-cpu"
 CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_MMC_SDHCI=y
+CONFIG_MMC_SDHCI_SDMA=y
+CONFIG_MMC_SDHCI_MCOM03=y
 CONFIG_ARASAN_GEMAC=y
 CONFIG_DM_RESET=y
 CONFIG_RESET_MCOM03=y
