mcom03: dts: Set MDC frequency and TX start threshold for HAPS
Maximum MDC frequency must be set to 150 KHz on HAPS. Higher
values lead to unstable MDIO reads/writes.

TX start threshold must be set to 1518 bytes. In this case frame
is sent to GMII only after all frame data has been copied by DMA
to FIFO. This allows to avoid underrun FIFO errors caused by low
AXI frequency on HAPS.

Issue: #MCOM03SW-124
Change-Id: Ief48c9e2caab410531fc8b944ab30699a806f8e9

--- a/arch/arm/dts/mcom03-haps-cpu.dts
+++ b/arch/arm/dts/mcom03-haps-cpu.dts
@@ -25,6 +25,10 @@
 	phy-handle = <&ethernet_phy>;
 	clocks = <&common_clk>;
 
+	/* These two are required on HAPS due to its low frequency  */
+	arasan,max-mdc-freq = <150000>;
+	arasan,tx-start-threshold = <1518>;
+
 	ethernet_phy: ethernet-phy@0 {
 		reg = <0x0>;
 	};
