--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -578,6 +578,7 @@ dtb-$(CONFIG_ARCH_MCOM) += \
 	mcom02-salute-el24d1-r1.3.dtb \
 	mcom02-salute-el24d1-r1.4.dtb \
 	mcom02-salute-el24d1-r1.5.dtb \
+	mcom02-salute-el24d1-r1.5-rf2chan.dtb \
 	mcom02-salute-el24d2-r1.1.dtb \
 	mcom02-salute-el24d3-r1.1.dtb \
 	mcom02-salute-el24pm1-r1.1-1.2-om1-r1.1-1.2.dtb \
