--- a/arch/arm/dts/mcom03-haps-common.dtsi
+++ b/arch/arm/dts/mcom03-haps-common.dtsi
@@ -16,7 +16,7 @@
 
 	chosen {
 		stdout-path = "serial1:115200n8";
-		bootargs = "earlycon console=ttyS0,115200 modprobe.blacklist=acptest";
+		bootargs = "earlycon console=ttyS0,115200 modprobe.blacklist=acptest,vdmaacptest";
 	};
 
 	memory@0 {
