--- a/arch/arm/dts/mcom03.dtsi
+++ b/arch/arm/dts/mcom03.dtsi
@@ -92,6 +92,12 @@
 			     <GIC_PPI 10 IRQ_TYPE_LEVEL_LOW>;
 	};
 
+	wdt0: watchdog@1f080000 {
+		compatible = "snps,dw-wdt";
+		reg = <0x1f080000 0x1000>;
+		/* TODO: Add clocks property here */
+	};
+
 	pmu {
 		compatible = "arm,cortex-a53-pmu";
 		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW>;
