mcom03: dts: Describe ISP
To workaround bug MCOM03SW-382 carveout memory allocator is used
in ISP driver. This is temporary solution.

Issue: #MCOM03SW-277
Issue: #MCOM03SW-382
Change-Id: If9355be6501a5160271959fba4d743f235715bb0

--- a/arch/arm/dts/mcom03-haps-common.dtsi
+++ b/arch/arm/dts/mcom03-haps-common.dtsi
@@ -24,7 +24,7 @@
 		reg = <0xC0080000 0x30000000>; /* 768 MiB */
 	};
 
-	reserved-memory {
+	reserved_memory: reserved-memory {
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
