sysreset: Add mcom02 sysreset driver
This is initial version of sysreset driver for MCom-02 SoC.

Issue: #MCOM02SW-1834
Change-Id: I4425f31eca276691158f0202e3134e8f02f77d39

--- a/drivers/sysreset/Kconfig
+++ b/drivers/sysreset/Kconfig
@@ -69,4 +69,9 @@ config SYSRESET_MCP83XX
 	help
 	  Reboot support for NXP MPC83xx SoCs.
 
+config SYSRESET_MCOM02
+	bool "Enable support MCom-02 SoC reboot driver"
+	help
+	  Reboot support for MCom-02 SoCs.
+
 endmenu
