--- a/configs/ipku2_defconfig
+++ b/configs/ipku2_defconfig
@@ -8,6 +8,7 @@ CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_TARGET_IPKU2=y
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
+CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
 CONFIG_SPL=y
 CONFIG_SPL_STACK_R_ADDR=0x40380000
 CONFIG_SPL_LIBDISK_SUPPORT=y
@@ -61,3 +62,5 @@ CONFIG_USB=y
 CONFIG_DM_USB=y
 # CONFIG_REGEX is not set
 # CONFIG_EFI_LOADER is not set
+CONFIG_SYSRESET=y
+CONFIG_SYSRESET_MCOM02=y
