--- a/configs/salutepm_defconfig
+++ b/configs/salutepm_defconfig
@@ -9,6 +9,7 @@ CONFIG_SYS_MALLOC_F_LEN=0xA00
 CONFIG_TARGET_SALUTE_PM=y
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
+CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
 CONFIG_SPL=y
 CONFIG_SPL_STACK_R_ADDR=0x40380000
 CONFIG_SPL_LIBDISK_SUPPORT=y
@@ -82,3 +83,5 @@ CONFIG_USB_STORAGE=y
 # CONFIG_REGEX is not set
 # CONFIG_EFI_LOADER is not set
 CONFIG_DISTRO_DEFAULTS=y
+CONFIG_SYSRESET=y
+CONFIG_SYSRESET_MCOM02=y
