--- a/configs/salutepmukf_defconfig
+++ b/configs/salutepmukf_defconfig
@@ -10,6 +10,7 @@ CONFIG_HW_WATCHDOG=y
 CONFIG_TARGET_SALUTE_PM=y
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
+CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
 CONFIG_SPL=y
 CONFIG_SPL_STACK_R_ADDR=0x40380000
 CONFIG_SPL_LIBDISK_SUPPORT=y
@@ -89,3 +90,5 @@ CONFIG_USB_GADGET_DOWNLOAD=y
 # CONFIG_REGEX is not set
 # CONFIG_EFI_LOADER is not set
 CONFIG_DISTRO_DEFAULTS=y
+CONFIG_SYSRESET=y
+CONFIG_SYSRESET_MCOM02=y
