mcom03: dts: Describe CPU clock
On HAPS configuration r2p0_mcom_full_2dsp_final CPU operates on a 10 MHz
frequency while the other subsystems use the 5 MHz common clock.

Issue: #MCOM03SW-411
Change-Id: Id903442d5fe539e2e98e7ea8e1c3b59e6a0d5c9d

--- a/arch/arm/dts/mcom03-haps-full.dts
+++ b/arch/arm/dts/mcom03-haps-full.dts
@@ -14,6 +14,12 @@
 		compatible = "elvees,acptest";
 	};
 
+	cpu_clk: cpu_clk {
+		#clock-cells = <0>;
+		compatible = "fixed-clock";
+		clock-frequency = <10000000>;
+	};
+
 	common_clk: common_clk {
 		#clock-cells = <0>;
 		compatible = "fixed-clock";
