--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -575,6 +575,7 @@ dtb-$(CONFIG_ARCH_MEDIATEK) += \
 	mt7629-rfb.dtb
 
 dtb-$(CONFIG_ARCH_MCOM) += \
+	mcom02-ecam02dm-r1.1.dtb \
 	mcom02-salute-el24d1-r1.3.dtb \
 	mcom02-salute-el24d1-r1.4.dtb \
 	mcom02-salute-el24d1-r1.5.dtb \
