mcom02: Add ECAM02DM board support
Issue: #MCOM02SW-1958
Issue: #MCOM02SW-1959
Change-Id: I6d5a234836ddaeecee03445165d66f35f103405c

--- a/board/elvees/Kconfig
+++ b/board/elvees/Kconfig
@@ -51,11 +51,18 @@ config TARGET_SALUTE_PM
 	help
 	  Support for Salute-EL24PM1 board
 
+config TARGET_ECAM02DM
+	bool "ECAM02DM"
+	select SUPPORT_SPL
+	help
+	  Support for ECAM02DM board
+
 endchoice
 
+source "board/elvees/ecam02dm/Kconfig"
+source "board/elvees/ipku/Kconfig"
 source "board/elvees/salute-d1/Kconfig"
 source "board/elvees/salute-d2/Kconfig"
-source "board/elvees/ipku/Kconfig"
 source "board/elvees/salute-pm/Kconfig"
 
 config FDTFILE
