ARM: dts: mcom: Add memory-regions for VINC and VPU
memory-region is a standard way to control how much CMA memory
the device can use.

Issue: #MCOM02SW-1852
Issue: #MCOM02SW-1853
Change-Id: I17f6b155958fed4201b872a06a29415cc34f5197

--- a/arch/arm/dts/mcom02.dtsi
+++ b/arch/arm/dts/mcom02.dtsi
@@ -12,6 +12,24 @@
 	compatible = "elvees,mcom02";
 	interrupt-parent = <&gic>;
 
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
+
+		vinc_reserved: vinc-pool {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x4000000>; // 64 MiB
+		};
+
+		vpu_reserved: vpu-pool {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x4000000>; // 64 MiB
+		};
+	};
+
 	aliases {
 		ethernet0 = &ethernet;
 	};
@@ -406,6 +424,7 @@
 	};
 
 	vinc: vinc@37200000 {
+		memory-region = <&vinc_reserved>;
 		compatible = "elvees,vinc";
 		reg = <0x37200000 0x4000>;
 		interrupts = <GIC_SPI 34 IRQ_TYPE_LEVEL_HIGH>,
@@ -1086,6 +1105,7 @@
 	};
 
 	vpu: codec@37100000 {
+		memory-region = <&vpu_reserved>;
 		compatible = "elvees,avico";
 		interrupts = <GIC_SPI 7 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&vpu_pclk>, <&vpu_aclk>, <&vpu_sclk>, <&dsp_aclk>;
