mcom03: Increase HAPS memory to 1023 MiB
768 MiB is not enough to run stress tests.

Issue: #MCOM03SW-460
Change-Id: I40937160feb7bccf889b6fc9c8dfba87f2d5f650

--- a/arch/arm/dts/mcom03-haps-common.dtsi
+++ b/arch/arm/dts/mcom03-haps-common.dtsi
@@ -21,7 +21,7 @@
 
 	memory@0 {
 		device_type = "memory";
-		reg = <0xC0080000 0x30000000>; /* 768 MiB */
+		reg = <0xC0080000 0x3FF00000>; /* 1023 MiB */
 	};
 
 	reserved_memory: reserved-memory {
