--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -587,7 +587,8 @@ dtb-$(CONFIG_ARCH_MCOM) += \
 	mcom02-ukf-r0.dtb \
 	mcom02-salute-el24pm2-r1.0-1.1-ukf-r1.0.dtb \
 	mcom02-salute-el24pm2-r1.0-1.1-ukf-r1.1.dtb \
-	mcom02-ipku-r1.1.dtb
+	mcom02-ipku-r1.1.dtb \
+	mcom02-ipku-r2.0.dtb
 
 targets += $(dtb-y)
 
